# churn-predictor

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
api/: main.py
data/: README.md  sample_500.csv
models/: metrics.json  pipeline.joblib
src/churn/: business.py  data.py  explain.py  pipeline.py  train.py
tests/: test_api.py  test_business.py  test_data.py  test_pipeline.py
