[project]
name = "churn-predictor"
version = "1.0.0"
description = "Customer churn prediction with SHAP explanations and FastAPI serving"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.45",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "gradio>=4.0",
    "joblib>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
